# reslab-torrent-client

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  release.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  settings.rs  torrent.rs
src-tauri/src/db/: mod.rs
src-tauri/src/engine/: manager.rs  mod.rs
src-tauri/src/webui/: mod.rs
src/components/: DetailPanel.tsx  Settings.tsx  Toolbar.tsx  TorrentRow.tsx
src/lib/: commands.ts  format.ts  theme.ts
