[package]
name = "reslab-torrent-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "reslab_torrent_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "reslab-torrent-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

librqbit = "9.0.0-rc.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

thiserror = "2"
anyhow = "1"

chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
toml = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
